# MusFuse

./: Cargo.toml  README.md
crates/musfuse-core/: Cargo.toml
crates/musfuse-core/src/: config.rs  cue.rs  error.rs  filesystem.rs  kv.rs  lib.rs  media.rs  metadata.rs  mount.rs  policy.rs  prelude.rs  scanner.rs  tag.rs  track.rs
crates/musfuse-core/src/kv/: sled_backend.rs
crates/musfuse-windows/: Cargo.toml  README.md  build.rs
crates/musfuse-windows/src/: lib.rs  main.rs  provider.rs
crates/musfuse-windows/src/adapter/: host_impl.rs  mod.rs  passthrough.rs  winfsp.rs
docs/: architecture.md  implementation_plan.md  m0-completion.md  quickstart.md  tasks.md
plan/: feature-media-engine-1.md
scripts/: check-windows-env.ps1
