[workspace]
members = [
    "crates/musfuse-core",
    "crates/musfuse-windows",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["ModerRAS <adqewsx@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
mockall = "0.12"
