[package]
name = "musfuse-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
sled.workspace = true
symphonia.workspace = true
flac-codec.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
hound.workspace = true
