[package]
name = "musfuse-windows"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
musfuse-core = { path = "../musfuse-core" }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
winfsp = "0.12.4"

[dev-dependencies]
mockall.workspace = true
